--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,10 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-console": "off",
+        "no-plusplus": "off",
+        "operator-linebreak": "off",
+        "no-param-reassign":"off",
+        "consistent-return":"off"
     }
 }
